cmake_minimum_required( VERSION 2.8 )

project( aoc2019 )

SET (CMAKE_EXPORT_COMPILE_COMMANDS ON)
SET (CMAKE_C_FLAGS "-Wall -Wextra -Werror -std=c99" )
SET (CMAKE_CXX_FLAGS "-Wall -Wextra -Werror -Wno-psabi -std=c++2a")

include_directories("Catch2/single_include")

file(GLOB UNITTESTS *_test.cpp)

enable_testing()
add_executable(unittest unittest.cpp ${UNITTESTS})
add_test(unittests unittest)

add_executable(day1_part1 day1_part1.cpp)
add_executable(day1_part2 day1_part2.cpp)
add_executable(day2_part1 day2_part1.cpp)
add_executable(day2_part2 day2_part2.cpp)
add_executable(day3_part1 day3_part1.cpp)
add_executable(day3_part2 day3_part2.cpp)
add_executable(day4_part1 day4_part1.cpp)
add_executable(day4_part2 day4_part2.cpp)
add_executable(day5_part1 day5_part1.cpp)
add_executable(day5_part2 day5_part2.cpp)
add_executable(day6_part1 day6_part1.cpp)
add_executable(day6_part2 day6_part2.cpp)
add_executable(day7_part1 day7_part1.cpp)
add_executable(day7_part2 day7_part2.cpp)
add_executable(day8_part1 day8_part1.cpp)
add_executable(day8_part2 day8_part2.cpp)
add_executable(day9_part1 day9_part1.cpp)
add_executable(day9_part2 day9_part2.cpp)
add_executable(day10_part1 day10_part1.cpp)
add_executable(day10_part2 day10_part2.cpp)
