cmake_minimum_required( VERSION 3.0 )

project( aoc2019 LANGUAGES CXX )

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror -pedantic -std=c++2a")

include_directories("Catch2/single_include")

file(GLOB UNITTESTS *_test.cpp)

enable_testing()
add_executable(unittest unittest.cpp ${UNITTESTS})
add_test(unittest unittest)

add_executable(day1_part1 day1_part1.cpp)
add_executable(day1_part2 day1_part2.cpp)
add_executable(day2_part1 day2_part1.cpp)
add_executable(day2_part2 day2_part2.cpp)
add_executable(day3_part1 day3_part1.cpp)
add_executable(day3_part2 day3_part2.cpp)
add_executable(day4_part1 day4_part1.cpp)
add_executable(day4_part2 day4_part2.cpp)
add_executable(day5_part1 day5_part1.cpp)
add_executable(day5_part2 day5_part2.cpp)
add_executable(day6_part1 day6_part1.cpp)
add_executable(day6_part2 day6_part2.cpp)
add_executable(day7_part1 day7_part1.cpp)
add_executable(day7_part2 day7_part2.cpp)
add_executable(day8_part1 day8_part1.cpp)
add_executable(day8_part2 day8_part2.cpp)
add_executable(day9_part1 day9_part1.cpp)
add_executable(day9_part2 day9_part2.cpp)
add_executable(day10_part1 day10_part1.cpp)
add_executable(day10_part2 day10_part2.cpp)
add_executable(day11_part1 day11_part1.cpp)
add_executable(day11_part2 day11_part2.cpp)
add_executable(day12_part1 day12_part1.cpp)
add_executable(day12_part2 day12_part2.cpp)
add_executable(day13_part1 day13_part1.cpp)
add_executable(day13_part2 day13_part2.cpp)
